Build: Align Irq source to PSA FF 1.0
Replace IRQ line_num and line_name by source field

Change-Id: I382aba5d5c477b1057a9ee08d8f2be1c2c4d8df5
Signed-off-by: Jaykumar Pitambarbhai Patel <jaykumar.pitambarbhaipatel@arm.com>

--- a/test/test_services/tfm_irq_test_service_1/tfm_irq_test_service_1.yaml
+++ b/test/test_services/tfm_irq_test_service_1/tfm_irq_test_service_1.yaml
@@ -37,7 +37,7 @@
   ],
   "irqs": [
     {
-      "line_name": "TFM_TIMER0_IRQ",
+      "source": "TFM_TIMER0_IRQ",
       "signal": "SPM_CORE_IRQ_TEST_1_SIGNAL_TIMER_0_IRQ",
       "tfm_irq_priority": 64,
     }
