--- a/secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc.template
+++ b/secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc.template
@@ -24,12 +24,10 @@ const struct tfm_core_irq_signal_data_t tfm_core_irq_signals[] = {
         {% endif %}
         {% for handler in manifest.manifest.irqs %}
             {% set irq_data = namespace() %}
-            {% if handler.line_num %}
-                {% set irq_data.line = handler.line_num %}
-            {% elif handler.line_name %}
-                {% set irq_data.line = handler.line_name %}
+            {% if handler.source %}
+                {% set irq_data.line = handler.source %}
             {% else %}
-#error "Neither line_num nor line_name is provided for 'irqs' in partition {{manifest.manifest.name}}"
+#error "Interrupt source isn't provided for 'irqs' in partition {{manifest.manifest.name}}"
             {% endif %}
             {% if handler.tfm_irq_priority %}
                 {% set irq_data.priority = handler.tfm_irq_priority %}
@@ -55,24 +53,22 @@ const size_t tfm_core_irq_signals_count = sizeof(tfm_core_irq_signals) /
 #ifdef {{manifest.attr.conditional}}
         {% endif %}
         {% for handler in manifest.manifest.irqs %}
-            {% if handler.line_num %}
-void irq_{{handler.line_num}}_Handler(void)
-            {% elif handler.line_name %}
-void {{handler.line_name}}_Handler(void)
+            {% if handler.source is number %}
+void irq_{{handler.source}}_Handler(void)
+            {% elif handler.source %}
+void {{handler.source}}_Handler(void)
             {% else %}
-#error "Neither line_num nor line_name is provided for 'irqs' in partition {{manifest.manifest.name}}"
+#error "Interrupt source isn't provided for 'irqs' in partition {{manifest.manifest.name}}"
             {% endif %}
 {
     __disable_irq();
     /* It is OK to call tfm_irq_handler directly from here, as we are already
      * in handler mode, and we will not be pre-empted as we disabled interrupts
      */
-            {% if handler.line_num %}
-    tfm_irq_handler({{manifest.manifest.name}}_ID, {{handler.signal}}, {{handler.line_num}});
-            {% elif handler.line_name %}
-    tfm_irq_handler({{manifest.manifest.name}}_ID, {{handler.signal}}, {{handler.line_name}});
+            {% if handler.source %}
+    tfm_irq_handler({{manifest.manifest.name}}_ID, {{handler.signal}}, {{handler.source}});
             {% else %}
-#error "Neither line_num nor line_name is provided for 'irqs' in partition {{manifest.manifest.name}}"
+#error "Interrupt source isn't provided for 'irqs' in partition {{manifest.manifest.name}}"
             {% endif %}
     __enable_irq();
 }
