Build: Align service version convention to PSA FF 1.0
Replace minor_version by version field
Replace minor_policy by version_policy field

Change-Id: I51b6f35fa4e5b529188168b7e99765a4add1cc47
Signed-off-by: Jaykumar Pitambarbhai Patel <jay08ec71@yahoo.com>

--- a/interface/include/psa_manifest/sid.h.template
+++ b/interface/include/psa_manifest/sid.h.template
@@ -25,7 +25,7 @@ extern "C" {
                 {% set str = service.name + "_SID" %}
 #define {{"%-58s"|format(str)}} ({{"%10s"|format(service.sid)}}U)
                 {% set str = service.name + "_VERSION" %}
-#define {{"%-58s"|format(str)}} ({{"%d"|format(service.minor_version)}}U)
+#define {{"%-58s"|format(str)}} ({{"%d"|format(service.version)}}U)
             {% endfor %}
         {% endif %}
         {% if manifest.attr.conditional %}
