--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -21,32 +21,32 @@
       "sid": "0x0000F080",
       "signal": "IPC_SERVICE_TEST_BASIC_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM",
       "sid": "0x0000F081",
       "signal": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM",
       "sid": "0x0000F082",
       "signal": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM",
       "sid": "0x0000F083",
       "signal": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ],
   "linker_pattern": {
