--- a/secure_fw/services/internal_trusted_storage/tfm_internal_trusted_storage.yaml
+++ b/secure_fw/services/internal_trusted_storage/tfm_internal_trusted_storage.yaml
@@ -18,29 +18,29 @@
       "sfid": "TFM_ITS_SET",
       "signal": "TFM_ITS_SET_REQ",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "sfid": "TFM_ITS_GET",
       "signal": "TFM_ITS_GET_REQ",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "sfid": "TFM_ITS_GET_INFO",
       "signal": "TFM_ITS_GET_INFO_REQ",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "sfid": "TFM_ITS_REMOVE",
       "signal": "TFM_ITS_REMOVE_REQ",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ],
   "services" : [{
@@ -48,32 +48,32 @@
     "sid": "0x00000070",
     "signal": "TFM_ITS_SET_SIG",
     "non_secure_clients": true,
-    "minor_version": 1,
-    "minor_policy": "STRICT"
+    "version": 1,
+    "version_policy": "STRICT"
    },
    {
     "name": "TFM_ITS_GET",
     "sid": "0x00000071",
     "signal": "TFM_ITS_GET_SIG",
     "non_secure_clients": true,
-    "minor_version": 1,
-    "minor_policy": "STRICT"
+    "version": 1,
+    "version_policy": "STRICT"
    },
    {
     "name": "TFM_ITS_GET_INFO",
     "sid": "0x00000072",
     "signal": "TFM_ITS_GET_INFO_SIG",
     "non_secure_clients": true,
-    "minor_version": 1,
-    "minor_policy": "STRICT"
+    "version": 1,
+    "version_policy": "STRICT"
    },
    {
     "name": "TFM_ITS_REMOVE",
     "sid": "0x00000073",
     "signal": "TFM_ITS_REMOVE_SIG",
     "non_secure_clients": true,
-    "minor_version": 1,
-    "minor_policy": "STRICT"
+    "version": 1,
+    "version_policy": "STRICT"
    }
   ],
   "linker_pattern": {
