--- a/test/test_services/tfm_core_test/tfm_test_core.yaml
+++ b/test/test_services/tfm_core_test/tfm_test_core.yaml
@@ -24,22 +24,22 @@
       "name": "TFM_CORE_TEST_SFN",
       "signal": "SPM_CORE_TEST_SFN",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_SFN_INIT_SUCCESS",
       "signal": "SPM_CORE_TEST_SFN_INIT_SUCCESS",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_SFN_DIRECT_RECURSION",
       "signal": "SPM_CORE_TEST_SFN_DIRECT_RECURSION",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ],
   "linker_pattern": {
@@ -53,96 +53,96 @@
       "sid": "0x0000F020",
       "signal": "SPM_CORE_TEST_INIT_SUCCESS_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_DIRECT_RECURSION",
       "sid": "0x0000F021",
       "signal": "SPM_CORE_TEST_DIRECT_RECURSION_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_MPU_ACCESS",
       "sid": "0x0000F022",
       "signal": "SPM_CORE_TEST_MPU_ACCESS_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_MEMORY_PERMISSIONS",
       "sid": "0x0000F023",
       "signal": "SPM_CORE_TEST_MEMORY_PERMISSIONS_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_SS_TO_SS",
       "sid": "0x0000F024",
       "signal": "SPM_CORE_TEST_SS_TO_SS_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_SS_TO_SS_BUFFER",
       "sid": "0x0000F025",
       "signal": "SPM_CORE_TEST_SS_TO_SS_BUFFER_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_OUTVEC_WRITE",
       "sid": "0x0000F026",
       "signal": "SPM_CORE_TEST_OUTVEC_WRITE_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_PERIPHERAL_ACCESS",
       "sid": "0x0000F027",
       "signal": "SPM_CORE_TEST_PERIPHERAL_ACCESS_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID",
       "sid": "0x0000F028",
       "signal": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_SPM_REQUEST",
       "sid": "0x0000F029",
       "signal": "SPM_CORE_TEST_SPM_REQUEST_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_BLOCK",
       "sid": "0x0000F02A",
       "signal": "SPM_CORE_TEST_BLOCK_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_NS_THREAD",
       "sid": "0x0000F02B",
       "signal": "SPM_CORE_TEST_NS_THREAD_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ]
 }
