--- a/test/test_services/tfm_core_test_2/tfm_test_core_2.yaml
+++ b/test/test_services/tfm_core_test_2/tfm_test_core_2.yaml
@@ -18,43 +18,43 @@
       "name": "TFM_CORE_TEST_2_SFN_SLAVE_SERVICE",
       "signal": "SPM_CORE_TEST_2_SLAVE_SERVICE",
       "non_secure_clients": false,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_2_SFN_INVERT",
       "signal": "SPM_CORE_TEST_2_SFN_INVERT",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_2_SFN_CHECK_CALLER_CLIENT_ID",
       "signal": "SPM_CORE_TEST_2_CHECK_CALLER_CLIENT_ID",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_2_SFN_GET_EVERY_SECOND_BYTE",
       "signal": "SPM_CORE_TEST_2_GET_EVERY_SECOND_BYTE",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_2_SFN_PREPARE_TEST_SCENARIO",
       "signal": "SPM_CORE_TEST_2_PREPARE_TEST_SCENARIO",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "TFM_CORE_TEST_2_SFN_EXECUTE_TEST_SCENARIO",
       "signal": "SPM_CORE_TEST_2_EXECUTE_TEST_SCENARIO",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ],
   "linker_pattern": {
@@ -68,48 +68,48 @@
       "sid": "0x0000F040",
       "signal": "SPM_CORE_TEST_2_SLAVE_SERVICE_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_2_CHECK_CALLER_CLIENT_ID",
       "sid": "0x0000F041",
       "signal": "SPM_CORE_TEST_2_CHECK_CALLER_CLIENT_ID_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_2_GET_EVERY_SECOND_BYTE",
       "sid": "0x0000F042",
       "signal": "SPM_CORE_TEST_2_GET_EVERY_SECOND_BYTE_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "SPM_CORE_TEST_2_INVERT",
       "sid": "0x0000F043",
       "signal": "SPM_CORE_TEST_2_INVERT_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
     "name": "SPM_CORE_TEST_2_PREPARE_TEST_SCENARIO",
     "sid": "0x0000F044",
     "signal": "SPM_CORE_TEST_2_PREPARE_TEST_SCENARIO_SIGNAL",
     "non_secure_clients": true,
-    "minor_version": 1,
-    "minor_policy": "STRICT"
+    "version": 1,
+    "version_policy": "STRICT"
     },
     {
     "name": "SPM_CORE_TEST_2_EXECUTE_TEST_SCENARIO",
     "sid": "0x0000F045",
     "signal": "SPM_CORE_TEST_2_EXECUTE_TEST_SCENARIO_SIGNAL",
     "non_secure_clients": true,
-    "minor_version": 1,
-    "minor_policy": "STRICT"
+    "version": 1,
+    "version_policy": "STRICT"
     },
   ]
 }
