--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -21,40 +21,40 @@
       "sid": "0x0000F060",
       "signal": "IPC_CLIENT_TEST_BASIC_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM",
       "sid": "0x0000F061",
       "signal": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM",
       "sid": "0x0000F062",
       "signal": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM",
       "sid": "0x0000F063",
       "signal": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     },
     {
       "name": "IPC_CLIENT_TEST_MEM_CHECK",
       "sid": "0x0000F064",
       "signal": "IPC_CLIENT_TEST_MEM_CHECK_SIGNAL",
       "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ],
   "linker_pattern": {
