Build: Remove conditional gaurding from manifest output files
interface/include/psa_manifest/sid.h.template
  - Remove conditional code gaurding as this type of style
    may create problem for partition developers if they don't
    have knowledge about the macros
  - Generate SID and version macro from service.name
secure_fw/services/manifestfilename.template
  - Remove conditional code gaurding
  - Generate SIGNAL macro from service.name
secure_fw/services/tfm_service_list.inc.template
  - Generate SIGNAL macro from service.name
  - Fix for unspecified minor policy
And re-generate manifest output files for above changes

Change-Id: Id367384ac76cb942da966e7619fb8090763ff0a7
Signed-off-by: Jaykumar Pitambarbhai Patel <jaykumar.pitambarbhaipatel@arm.com>

--- a/interface/include/psa_manifest/sid.h.template
+++ b/interface/include/psa_manifest/sid.h.template
@@ -16,20 +16,18 @@ extern "C" {
 
 {% for manifest in manifests %}
     {% if manifest.attr.tfm_partition_ipc %}
-        {% if manifest.attr.conditional %}
-#ifdef {{manifest.attr.conditional}}
-        {% endif %}
 /******** {{manifest.manifest.name}} ********/
         {% if manifest.manifest.services %}
             {% for service in manifest.manifest.services %}
                 {% set str = service.name + "_SID" %}
 #define {{"%-58s"|format(str)}} ({{"%10s"|format(service.sid)}}U)
                 {% set str = service.name + "_VERSION" %}
+                {% if service.version %}
 #define {{"%-58s"|format(str)}} ({{"%d"|format(service.version)}}U)
+                {% else %}
+#define {{"%-58s"|format(str)}} (1U)
+                {% endif %}
             {% endfor %}
-        {% endif %}
-        {% if manifest.attr.conditional %}
-#endif /* {{manifest.attr.conditional}} */
         {% endif %}
 
     {% endif %}
