Test: Add an option flag to control multi-core tests
Add an option flag TFM_MULTI_CORE_TEST to control multi-core
specific tests. The multi-core platform should explicitly set it to
ON to enable multi-core tests.

Change-Id: I3f6e6aaa0ecaa109db1a503a26e05bb52f12f07c
Signed-off-by: David Hu <david.hu@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -310,6 +310,11 @@ function(set_up_secure_fw_build)
 		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_ENABLE_IRQ_TEST")
 	endif()
 
+	if (TFM_MULTI_CORE_TEST)
+		add_definitions(-DTFM_MULTI_CORE_TEST)
+		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_MULTI_CORE_TEST")
+	endif()
+
 	#Generate binary file from executable
 	compiler_generate_binary_output(${EXE_NAME})
 
