--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -6,6 +6,7 @@
 #-------------------------------------------------------------------------------
 
 {
+  "psa_framework_version": 1.0,
   "name": "TFM_SP_IPC_CLIENT_TEST",
   "type": "APPLICATION-ROT",
   "priority": "NORMAL",
