--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -6,6 +6,7 @@
 #-------------------------------------------------------------------------------
 
 {
+  "psa_framework_version": 1.0,
   "name": "TFM_SP_IPC_SERVICE_TEST",
   "type": "PSA-ROT",
   "priority": "HIGH",
