--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -60,6 +60,11 @@
         "name": "SID H file",
         "short_name": "sid.h",
         "output": "interface/include/psa_manifest/sid.h"
+    },
+    {
+        "name": "PID H file",
+        "short_name": "pid.h",
+        "output": "interface/include/psa_manifest/pid.h"
     }
   ]
 }
