--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -68,9 +68,9 @@ SECTIONS
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-        LONG (LOADADDR(.{{manifest.manifest.name}}_DATA))
-        LONG (ADDR(.{{manifest.manifest.name}}_DATA))
-        LONG (SIZEOF(.{{manifest.manifest.name}}_DATA))
+        LONG (LOADADDR(.{{manifest.manifest.name}}_LINKER_DATA))
+        LONG (ADDR(.{{manifest.manifest.name}}_LINKER_DATA))
+        LONG (SIZEOF(.{{manifest.manifest.name}}_LINKER_DATA))
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
     {% endif %}
@@ -96,11 +96,11 @@ SECTIONS
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-        LONG (ADDR(.{{manifest.manifest.name}}_BSS))
-        LONG (SIZEOF(.{{manifest.manifest.name}}_BSS))
+        LONG (ADDR(.{{manifest.manifest.name}}_LINKER_BSS))
+        LONG (SIZEOF(.{{manifest.manifest.name}}_LINKER_BSS))
 #if defined(TFM_PSA_API)
-        LONG (ADDR(.{{manifest.manifest.name}}_STACK))
-        LONG (SIZEOF(.{{manifest.manifest.name}}_STACK))
+        LONG (ADDR(.{{manifest.manifest.name}}_LINKER_STACK))
+        LONG (SIZEOF(.{{manifest.manifest.name}}_LINKER_STACK))
 #endif
         {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
@@ -143,7 +143,7 @@ SECTIONS
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-    .{{manifest.manifest.name}} : ALIGN(32)
+    .{{manifest.manifest.name}}_LINKER : ALIGN(32)
     {
     {% if manifest.manifest.linker_pattern.library_list %}
         {% for pattern in manifest.manifest.linker_pattern.library_list %}
@@ -157,13 +157,13 @@ SECTIONS
         {{pattern}}(.rodata*)
         {% endfor %}
     {% endif %}
-        *({{manifest.manifest.name}}_ATTR_FN)
+        *({{manifest.manifest.name}}_LD_ATTR_FN)
         . = ALIGN(32);
     } > FLASH
-    Image$${{manifest.manifest.name}}$$RO$$Base = ADDR(.{{manifest.manifest.name}});
-    Image$${{manifest.manifest.name}}$$RO$$Limit = ADDR(.{{manifest.manifest.name}}) + SIZEOF(.{{manifest.manifest.name}});
-    Image$${{manifest.manifest.name}}$$Base = ADDR(.{{manifest.manifest.name}});
-    Image$${{manifest.manifest.name}}$$Limit = ADDR(.{{manifest.manifest.name}}) + SIZEOF(.{{manifest.manifest.name}});
+    Image$${{manifest.manifest.name}}_LINKER$$RO$$Base = ADDR(.{{manifest.manifest.name}}_LINKER);
+    Image$${{manifest.manifest.name}}_LINKER$$RO$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER) + SIZEOF(.{{manifest.manifest.name}}_LINKER);
+    Image$${{manifest.manifest.name}}_LINKER$$Base = ADDR(.{{manifest.manifest.name}}_LINKER);
+    Image$${{manifest.manifest.name}}_LINKER$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER) + SIZEOF(.{{manifest.manifest.name}}_LINKER);
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
     {% endif %}
@@ -181,7 +181,7 @@ SECTIONS
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-    .{{manifest.manifest.name}} : ALIGN(32)
+    .{{manifest.manifest.name}}_LINKER : ALIGN(32)
     {
     {% if manifest.manifest.linker_pattern.library_list %}
         {% for pattern in manifest.manifest.linker_pattern.library_list %}
@@ -198,10 +198,10 @@ SECTIONS
         *({{manifest.manifest.name}}_ATTR_FN)
         . = ALIGN(32);
     } > FLASH
-    Image$${{manifest.manifest.name}}$$RO$$Base = ADDR(.{{manifest.manifest.name}});
-    Image$${{manifest.manifest.name}}$$RO$$Limit = ADDR(.{{manifest.manifest.name}}) + SIZEOF(.{{manifest.manifest.name}});
-    Image$${{manifest.manifest.name}}$$Base = ADDR(.{{manifest.manifest.name}});
-    Image$${{manifest.manifest.name}}$$Limit = ADDR(.{{manifest.manifest.name}}) + SIZEOF(.{{manifest.manifest.name}});
+    Image$${{manifest.manifest.name}}_LINKER$$RO$$Base = ADDR(.{{manifest.manifest.name}}_LINKER);
+    Image$${{manifest.manifest.name}}_LINKER$$RO$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER) + SIZEOF(.{{manifest.manifest.name}}_LINKER);
+    Image$${{manifest.manifest.name}}_LINKER$$Base = ADDR(.{{manifest.manifest.name}}_LINKER);
+    Image$${{manifest.manifest.name}}_LINKER$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER) + SIZEOF(.{{manifest.manifest.name}}_LINKER);
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
     {% endif %}
@@ -361,7 +361,7 @@ SECTIONS
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-    .{{manifest.manifest.name}}_DATA : ALIGN(32)
+    .{{manifest.manifest.name}}_LINKER_DATA : ALIGN(32)
     {
     {% if manifest.manifest.linker_pattern.library_list %}
         {% for pattern in manifest.manifest.linker_pattern.library_list %}
@@ -376,12 +376,12 @@ SECTIONS
         *({{manifest.manifest.name}}_ATTR_RW)
         . = ALIGN(32);
     } > RAM AT> FLASH
-    Image$${{manifest.manifest.name}}_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_DATA);
-    Image$${{manifest.manifest.name}}_DATA$$RW$$Limit = ADDR(.{{manifest.manifest.name}}_DATA) + SIZEOF(.{{manifest.manifest.name}}_DATA);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_LINKER_DATA);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$RW$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER_DATA) + SIZEOF(.{{manifest.manifest.name}}_LINKER_DATA);
 
-    .{{manifest.manifest.name}}_BSS : ALIGN(32)
+    .{{manifest.manifest.name}}_LINKER_BSS : ALIGN(32)
     {
-        start_of_{{manifest.manifest.name}} = .;
+        start_of_{{manifest.manifest.name}}_LINKER = .;
     {% if manifest.manifest.linker_pattern.library_list %}
         {% for pattern in manifest.manifest.linker_pattern.library_list %}
         {{pattern}}:*(.bss*)
@@ -395,20 +395,20 @@ SECTIONS
         {% endfor %}
     {% endif %}
         *({{manifest.manifest.name}}_ATTR_ZI)
-        . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
+        . += (. - start_of_{{manifest.manifest.name}}_LINKER) ? 0 : 4;
         . = ALIGN(32);
     } > RAM AT> RAM
-    Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
-    Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_LINKER_BSS);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER_BSS) + SIZEOF(.{{manifest.manifest.name}}_LINKER_BSS);
 
     {% if manifest.attr.tfm_partition_ipc %}
 #if defined (TFM_PSA_API)
-    .{{manifest.manifest.name}}_STACK : ALIGN(128)
+    .{{manifest.manifest.name}}_LINKER_STACK : ALIGN(128)
     {
         . += {{manifest.manifest.stack_size}};
     } > RAM
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
+    Image$${{manifest.manifest.name}}_LINKER_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_LINKER_STACK);
+    Image$${{manifest.manifest.name}}_LINKER_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER_STACK) + SIZEOF(.{{manifest.manifest.name}}_LINKER_STACK);
 #endif
     {% endif %}
 
@@ -423,13 +423,13 @@ SECTIONS
 
 #if TFM_LVL != 1
 #ifdef TFM_PARTITION_TEST_SECURE_SERVICES
-    .TFM_SP_SECURE_TEST_PARTITION_DATA : ALIGN(32)
+    .TFM_SP_SECURE_TEST_PARTITION_LINKER_DATA : ALIGN(32)
     {
         *libc_nano*:*(.data*)
         . = ALIGN(32);
     } > RAM AT> FLASH
 
-    .TFM_SP_SECURE_TEST_PARTITION_BSS : ALIGN(32)
+    .TFM_SP_SECURE_TEST_PARTITION_LINKER_BSS : ALIGN(32)
     {
         /* FixMe:
          * Test framework use printf to print out test result. Implementation of
@@ -511,7 +511,7 @@ SECTIONS
     {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
-    .{{manifest.manifest.name}}_DATA : ALIGN(32)
+    .{{manifest.manifest.name}}_LINKER_DATA : ALIGN(32)
     {
     {% if manifest.manifest.linker_pattern.library_list %}
         {% for pattern in manifest.manifest.linker_pattern.library_list %}
@@ -526,12 +526,12 @@ SECTIONS
         *({{manifest.manifest.name}}_ATTR_RW)
         . = ALIGN(32);
     } > RAM AT> FLASH
-    Image$${{manifest.manifest.name}}_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_DATA);
-    Image$${{manifest.manifest.name}}_DATA$$RW$$Limit = ADDR(.{{manifest.manifest.name}}_DATA) + SIZEOF(.{{manifest.manifest.name}}_DATA);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_LINKER_DATA);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$RW$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER_DATA) + SIZEOF(.{{manifest.manifest.name}}_LINKER_DATA);
 
-    .{{manifest.manifest.name}}_BSS : ALIGN(32)
+    .{{manifest.manifest.name}}_LINKER_BSS : ALIGN(32)
     {
-        start_of_{{manifest.manifest.name}} = .;
+        start_of_{{manifest.manifest.name}}_LINKER = .;
     {% if manifest.manifest.linker_pattern.library_list %}
         {% for pattern in manifest.manifest.linker_pattern.library_list %}
         {{pattern}}:*(.bss*)
@@ -545,20 +545,20 @@ SECTIONS
         {% endfor %}
     {% endif %}
         *({{manifest.manifest.name}}_ATTR_ZI)
-        . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
+        . += (. - start_of_{{manifest.manifest.name}}_LINKER) ? 0 : 4;
         . = ALIGN(32);
     } > RAM AT> RAM
-    Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
-    Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_LINKER_BSS);
+    Image$${{manifest.manifest.name}}_LINKER_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER_BSS) + SIZEOF(.{{manifest.manifest.name}}_LINKER_BSS);
 
     {% if manifest.attr.tfm_partition_ipc %}
 #if defined (TFM_PSA_API)
-    .{{manifest.manifest.name}}_STACK : ALIGN(128)
+    .{{manifest.manifest.name}}_LINKER_STACK : ALIGN(128)
     {
         . += {{manifest.manifest.stack_size}};
     } > RAM
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
+    Image$${{manifest.manifest.name}}_LINKER_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_LINKER_STACK);
+    Image$${{manifest.manifest.name}}_LINKER_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_LINKER_STACK) + SIZEOF(.{{manifest.manifest.name}}_LINKER_STACK);
 #endif
     {% endif %}
 
